# kinthic-v2

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  kinthic_core_directives.md  migrate_engine.py  pyproject.toml  skills-lock.json  test_azure.py  test_azure2.py  test_azure3.py  test_ping.py  test_ping2.py  test_ping3.py  test_ping_print.py
.agents/: AGENTS.md  skills.json
agent/: __init__.py  jobs.py  orchestrator.py  subagent.py
agent/benchmarks/: __init__.py  scenarios.py
agent/collaboration/: __init__.py  worktree.py
agent/compute/: __init__.py  isolation_provider.py  process.py  sidecar_daemon.py
docs/: COMMUNITY.md  PLUGIN_DEVELOPMENT.md  architecture.md  cli_reference.md  kinthichub-registry-spec.md  mcp.md  migration.md  mint.json  orchestration.md  performance.md  quickstart.md  sandboxing.md  telegram-guide.md  tui-operator-guide.md  vps-telegram.md  wsl-setup.md
kinthic-dashboard/: package-lock.json  package.json  tailwind.config.ts
kinthic-ink-ui/: package-lock.json  package.json  tsconfig.json
plugins/: __init__.py
scratch/: debug_import.py  migrate_imports.py  reset_db.py  test_browser_shutdown.py  test_dispatch_directly.py  test_loop_wsl.py  test_shell_command.py  test_start_command.py  test_wrapper.py  test_x_login.py  verify_fixes.py
scripts/: __init__.py  cli.py  daemon.py  dashboard_api.py  demo.py  discord_bot.py  fix3.py  fix_cli.py  fix_cli2.py  gen_plugins.py  install.sh  kinthic-supervisor.service  kinthic.service  mcp_recall_benchmark.py  run.py  seed_github_issues.py  setup_vps.sh  start_kinthic.sh  telegram_bot.py  watchdog.py
silex_core/: loop.py  observability.py
silex_engine/: __main__.py  config.py  logger.py  utils.py
skills/: README.md  analyze_logs.md  code_reviewer.md  daily_briefing.md  debug_error.md  draft_blog_post.md  generate_tests.md  git_integration.md  git_integration.yaml  refactor_code.md  repo_onboard.md  repo_researcher.md  repo_researcher.yaml  save_article.md  save_article.yaml  security_audit.md  summarize_meeting.md  summarize_meeting.yaml  telegram_setup.md  tell_joke.md  tell_joke.yaml  triage_issues.md  write_release_notes.md  write_release_notes.yaml
tests/: conftest.py  scratch.py  test_belief_revision.py  test_belief_revision_phase2.py  test_briefing_service.py  test_browser_session_manager.py  test_cpg_parser.py  test_engine_concurrency.py  test_hybrid_retrieval_phase3.py  test_json_repair_robust.py  test_rag_index_tool.py  test_self_repair_phase4.py  test_social_x.py  test_tool_sandbox.py  test_watchdog.py
(+207 files in other folders)
